--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Yuh protocol</title>
   </head>
   <body>
-    <button id="button1" onclick="open">Click me!</button>
+    <button id="button1" onclick="open()">Click me!</button>
   </body>
   <script>
     function open() {
