--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </body>
   <script>
     function open() {
-      window.location = "yuh://authorization/email-otp"
+      console.log("Opening yuh app");
+      window.location.href = "yuh://authorization/email-otp"
     }
   </script>
 </html>
