--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <title>Yuh protocol</title>
   </head>
-  <body>
-    <button id="button1" onclick="open()">Click me!</button>
-  </body>
-  <script>
-    function open() {
-      console.log("Opening yuh app");
-      window.location.href = "yuh://authorization/email-otp"
-    }
-  </script>
+<body>
+  <button id="button1" onclick="openApp()">Click me!</button>
+</body>
+
+<script>
+  function openApp() {
+    console.log("Opening yuh app");
+    window.location.href = "yuh://authorization/email-otp";
+  }
+</script>
 </html>
