--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
 <body>
   <button id="button1" onclick="openApp()">Click me!</button>
+  <a href="yuh://authorization/email-otp">A link</a>
 </body>
 
 <script>
