--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   function updateChallenge(ch) {
     challenge = ch;
     document.getElementById("alink").href = deeplink();
-    document.getElementById("link").value = deeplink();
+    document.getElementById("link").innerText = deeplink();
   }
   
 </script>
